[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://UI/Templates/SettingsTemplate.gd" id="1"]

[node name="SettingsTemplate" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(360, 220)
script = ExtResource("1")

[node name="Layout" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="VBoxContainer" parent="Layout"]
size_flags_horizontal = 3

[node name="Title" type="Label" parent="Layout/Header"]
size_flags_horizontal = 3
text = "Settings"

[node name="Description" type="Label" parent="Layout/Header"]
size_flags_horizontal = 3
visible = false
text = "Configure gameplay options"

[node name="Sections" type="ScrollContainer" parent="Layout"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SectionList" type="VBoxContainer" parent="Layout/Sections"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Footer" type="HBoxContainer" parent="Layout"]
size_flags_horizontal = 3

[node name="ActionBar" type="HBoxContainer" parent="Layout/Footer"]
size_flags_horizontal = 3
alignment = 2
custom_minimum_size = Vector2(0, 48)

